--- a/war/TMobile.css
+++ b/war/TMobile.css
@@ -1,5 +1,8 @@
 /** Add css rules here for your application. */
 
+body {
+  margin: 0px !important;
+}
 
 /** Example rules used by the template application (remove for your app) */
 h1 {
